# kmux

./: .flatpak-manifest.json  AGENTS.md  BUILD.md  CMakeLists.txt  CODE_REVIEW_VITYAS_OFF.md  Mainpage.dox  README.md  RELEASE_CHECKLIST.md  REUSE.toml  io.github.vityas_off.kmux.json
.claude/skills/verify/: SKILL.md
completions/: kmux.zsh
data/: data.qrc  kmux.knsrc
data/keyboard-layouts/: default.keytab
desktop/: CMakeLists.txt  io.github.kmux_project.kmux.appdata.xml  io.github.kmux_project.kmux.desktop  io.github.vityas_off.kmux.metainfo.xml  kmux.notifyrc  kmux.qrc  kmuxpart.desktop  kmuxrun.desktop  konsoleui.rc  partui.rc
src/: Application.cpp  Application.h  ApplicationMetadata.h  BookmarkHandler.cpp  BookmarkHandler.h  CMakeLists.txt  Emulation.h  GenerateGitRevision.cmake  LocalActivationServer.cpp  LocalActivationServer.h  MainWindow.cpp  MainWindow.h  Messages.sh  Part.cpp  Part.h  ViewManager.cpp  ViewManager.h  Vt102Emulation.cpp  config-konsole.h.cmake  kmuxpart.json  konsole-agent-hooks.cpp  konsole-codex.cpp  konsole-project-status.cpp  main.cpp
src/autotests/: AgentHooksTest.cpp  ApplicationTest.cpp  ApplicationTest.h  CMakeLists.txt  ColorSchemeManagerTest.cpp  DBusTest.cpp  KeyboardTranslatorTest.cpp  KeyboardTranslatorTest.h  LocalActivationServerTest.cpp  PartTest.cpp  PartTest.h  ProfileTest.cpp  ProfileTest.h  ProjectWorkspaceModelTest.cpp  SessionTest.cpp  SessionTest.h  TerminalInterfaceTest.cpp  ViewManagerTest.cpp  ViewManagerTest.h
src/characters/: CMakeLists.txt
src/colorscheme/: CMakeLists.txt  ColorSchemeManager.cpp  ColorSchemeManager.h
src/history/: HistoryFile.cpp
src/keyboardtranslator/: KeyboardTranslator.cpp  KeyboardTranslatorManager.cpp  KeyboardTranslatorManager.h
src/plugins/QuickCommands/: CMakeLists.txt  kmux_quickcommands.in.json  quickcommandsmodel.cpp  quickcommandsplugin.cpp
src/plugins/SSHManager/: CMakeLists.txt  kmux_sshmanager.in.json  sshmanagermodel.cpp  sshmanagerplugin.cpp
src/pluginsystem/: PluginManager.cpp
src/profile/: Profile.cpp  ProfileManager.cpp  ProfileReader.cpp  ProfileWriter.cpp  ProfileWriter.h
src/session/: Session.cpp  Session.h  SessionController.cpp  SessionManager.cpp  SessionManager.h
src/settings/: konsole.kcfg
src/tests/: PartManualTest.cpp
src/tests/demo_konsolepart/src/: demo_konsolepart.cpp
src/widgets/: DetachableTabBar.cpp  EditProfileDialog.cpp  ProjectWorkspaceContainer.cpp  ProjectWorkspaceContainer.h  ViewContainer.cpp  ViewContainer.h
src/workspaces/: ProjectWorkspaceModel.cpp  ProjectWorkspaceModel.h
tools/: CMakeLists.txt  kmuxprofile
